--- a/Horse/Horse_v2/Horse/Horse.ioc
+++ b/Horse/Horse_v2/Horse/Horse.ioc
@@ -22,53 +22,54 @@ Mcu.Name=STM32F407V(E-G)Tx
 Mcu.Package=LQFP100
 Mcu.Pin0=PE3
 Mcu.Pin1=PE5
-Mcu.Pin10=PC3
-Mcu.Pin11=PA0-WKUP
-Mcu.Pin12=PA1
-Mcu.Pin13=PA2
-Mcu.Pin14=PA3
-Mcu.Pin15=PA4
-Mcu.Pin16=PA5
-Mcu.Pin17=PA7
-Mcu.Pin18=PB2
-Mcu.Pin19=PE8
+Mcu.Pin10=PA0-WKUP
+Mcu.Pin11=PA1
+Mcu.Pin12=PA2
+Mcu.Pin13=PA3
+Mcu.Pin14=PA4
+Mcu.Pin15=PA5
+Mcu.Pin16=PA7
+Mcu.Pin17=PB2
+Mcu.Pin18=PE8
+Mcu.Pin19=PE9
 Mcu.Pin2=PC13-ANTI_TAMP
-Mcu.Pin20=PE9
-Mcu.Pin21=PE11
-Mcu.Pin22=PB10
-Mcu.Pin23=PB11
-Mcu.Pin24=PB12
-Mcu.Pin25=PD12
-Mcu.Pin26=PD13
-Mcu.Pin27=PC6
-Mcu.Pin28=PC7
-Mcu.Pin29=PC8
+Mcu.Pin20=PE11
+Mcu.Pin21=PB10
+Mcu.Pin22=PB11
+Mcu.Pin23=PB12
+Mcu.Pin24=PD12
+Mcu.Pin25=PD13
+Mcu.Pin26=PC6
+Mcu.Pin27=PC7
+Mcu.Pin28=PC8
+Mcu.Pin29=PC9
 Mcu.Pin3=PC14-OSC32_IN
-Mcu.Pin30=PC9
-Mcu.Pin31=PA8
-Mcu.Pin32=PA13
-Mcu.Pin33=PA14
-Mcu.Pin34=PA15
-Mcu.Pin35=PC11
-Mcu.Pin36=PD3
-Mcu.Pin37=PD4
-Mcu.Pin38=PD5
-Mcu.Pin39=PD7
+Mcu.Pin30=PA8
+Mcu.Pin31=PA13
+Mcu.Pin32=PA14
+Mcu.Pin33=PA15
+Mcu.Pin34=PC11
+Mcu.Pin35=PD0
+Mcu.Pin36=PD2
+Mcu.Pin37=PD3
+Mcu.Pin38=PD4
+Mcu.Pin39=PD5
 Mcu.Pin4=PC15-OSC32_OUT
-Mcu.Pin40=PB3
-Mcu.Pin41=PB4
-Mcu.Pin42=PB5
-Mcu.Pin43=PB7
-Mcu.Pin44=PB9
-Mcu.Pin45=PE1
-Mcu.Pin46=VP_FREERTOS_VS_ENABLE
-Mcu.Pin47=VP_SYS_VS_tim14
+Mcu.Pin40=PD7
+Mcu.Pin41=PB3
+Mcu.Pin42=PB4
+Mcu.Pin43=PB5
+Mcu.Pin44=PB7
+Mcu.Pin45=PB9
+Mcu.Pin46=PE1
+Mcu.Pin47=VP_FREERTOS_VS_ENABLE
+Mcu.Pin48=VP_SYS_VS_tim14
 Mcu.Pin5=PH0-OSC_IN
 Mcu.Pin6=PH1-OSC_OUT
-Mcu.Pin7=PC0
-Mcu.Pin8=PC1
-Mcu.Pin9=PC2
-Mcu.PinsNb=48
+Mcu.Pin7=PC1
+Mcu.Pin8=PC2
+Mcu.Pin9=PC3
+Mcu.PinsNb=49
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F407VGTx
@@ -139,11 +140,6 @@ PB9.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
 PB9.GPIO_PuPd=GPIO_PULLUP
 PB9.Locked=true
 PB9.Signal=GPXTI9
-PC0.GPIOParameters=GPIO_PuPd,GPIO_ModeDefaultEXTI
-PC0.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
-PC0.GPIO_PuPd=GPIO_PULLUP
-PC0.Locked=true
-PC0.Signal=GPXTI0
 PC1.Locked=true
 PC1.Signal=GPIO_Output
 PC11.Locked=true
@@ -179,8 +175,18 @@ PCC.Seq0=0
 PCC.Series=STM32F4
 PCC.Temperature=25
 PCC.Vdd=3.3
+PD0.GPIOParameters=GPIO_PuPd,GPIO_ModeDefaultEXTI
+PD0.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
+PD0.GPIO_PuPd=GPIO_PULLUP
+PD0.Locked=true
+PD0.Signal=GPXTI0
 PD12.Signal=S_TIM4_CH1
 PD13.Signal=S_TIM4_CH2
+PD2.GPIOParameters=GPIO_PuPd,GPIO_ModeDefaultEXTI
+PD2.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
+PD2.GPIO_PuPd=GPIO_PULLUP
+PD2.Locked=true
+PD2.Signal=GPXTI2
 PD3.Locked=true
 PD3.Signal=GPIO_Output
 PD4.Locked=true
@@ -285,6 +291,8 @@ SH.GPXTI14.0=GPIO_EXTI14
 SH.GPXTI14.ConfNb=1
 SH.GPXTI15.0=GPIO_EXTI15
 SH.GPXTI15.ConfNb=1
+SH.GPXTI2.0=GPIO_EXTI2
+SH.GPXTI2.ConfNb=1
 SH.GPXTI3.0=GPIO_EXTI3
 SH.GPXTI3.ConfNb=1
 SH.GPXTI5.0=GPIO_EXTI5
