--- a/Horse/Walker Horse/Horse_Test/B/B.ioc
+++ b/Horse/Walker Horse/Horse_Test/B/B.ioc
@@ -12,14 +12,16 @@ Mcu.Name=STM32F407V(E-G)Tx
 Mcu.Package=LQFP100
 Mcu.Pin0=PH0-OSC_IN
 Mcu.Pin1=PH1-OSC_OUT
-Mcu.Pin10=PA13
-Mcu.Pin11=PA14
-Mcu.Pin12=PA15
-Mcu.Pin13=PC11
-Mcu.Pin14=PD2
-Mcu.Pin15=PD4
-Mcu.Pin16=PB3
-Mcu.Pin17=VP_SYS_VS_Systick
+Mcu.Pin10=PA9
+Mcu.Pin11=PA10
+Mcu.Pin12=PA13
+Mcu.Pin13=PA14
+Mcu.Pin14=PA15
+Mcu.Pin15=PC11
+Mcu.Pin16=PD2
+Mcu.Pin17=PD4
+Mcu.Pin18=PB3
+Mcu.Pin19=VP_SYS_VS_Systick
 Mcu.Pin2=PB10
 Mcu.Pin3=PB11
 Mcu.Pin4=PD12
@@ -28,7 +30,7 @@ Mcu.Pin6=PC6
 Mcu.Pin7=PC7
 Mcu.Pin8=PC8
 Mcu.Pin9=PC9
-Mcu.PinsNb=18
+Mcu.PinsNb=20
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F407VGTx
@@ -44,12 +46,16 @@ NVIC.PriorityGroup=NVIC_PRIORITYGROUP_0
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:true
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:true
+PA10.Locked=true
+PA10.Signal=GPIO_Output
 PA13.Mode=Trace_Asynchronous_SW
 PA13.Signal=SYS_JTMS-SWDIO
 PA14.Mode=Trace_Asynchronous_SW
 PA14.Signal=SYS_JTCK-SWCLK
 PA15.Locked=true
 PA15.Signal=GPIO_Output
+PA9.Locked=true
+PA9.Signal=GPIO_Output
 PB10.Mode=Asynchronous
 PB10.Signal=USART3_TX
 PB11.Mode=Asynchronous
