--- a/Horse/Walker Horse/Horse_Generator/Horse/Horse.ioc
+++ b/Horse/Walker Horse/Horse_Generator/Horse/Horse.ioc
@@ -51,13 +51,12 @@ Mcu.Pin37=PB8
 Mcu.Pin38=PB9
 Mcu.Pin39=VP_SYS_VS_Systick
 Mcu.Pin4=PA1
-Mcu.Pin40=VP_TIM8_VS_ClockSourceINT
 Mcu.Pin5=PA2
 Mcu.Pin6=PA4
 Mcu.Pin7=PA5
 Mcu.Pin8=PA7
 Mcu.Pin9=PE9
-Mcu.PinsNb=41
+Mcu.PinsNb=40
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F407VGTx
@@ -321,11 +320,11 @@ TIM2.Period=65535
 TIM3.EncoderMode=TIM_ENCODERMODE_TI12
 TIM3.IPParameters=EncoderMode,Period
 TIM3.Period=65535
-TIM8.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
 TIM8.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
 TIM8.Channel-PWM\ Generation3\ CH3=TIM_CHANNEL_3
 TIM8.Channel-PWM\ Generation4\ CH4=TIM_CHANNEL_4
-TIM8.IPParameters=Channel-PWM Generation1 CH1,Channel-PWM Generation2 CH2,Channel-PWM Generation3 CH3,Channel-PWM Generation4 CH4,Period
+TIM8.CounterMode=TIM_COUNTERMODE_CENTERALIGNED1
+TIM8.IPParameters=Channel-PWM Generation2 CH2,Channel-PWM Generation3 CH3,Channel-PWM Generation4 CH4,Period,CounterMode
 TIM8.Period=10499
 USART1.IPParameters=VirtualMode
 USART1.VirtualMode=VM_ASYNC
@@ -336,7 +335,5 @@ USART3.IPParameters=VirtualMode,BaudRate
 USART3.VirtualMode=VM_ASYNC
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
-VP_TIM8_VS_ClockSourceINT.Mode=Internal
-VP_TIM8_VS_ClockSourceINT.Signal=TIM8_VS_ClockSourceINT
 board=STM32F4DISCOVERY
 boardIOC=true
