--- a/Horse/Walker_Horse/Final_Robot/Horse_Generator/Horse/Horse.ioc
+++ b/Horse/Walker_Horse/Final_Robot/Horse_Generator/Horse/Horse.ioc
@@ -19,48 +19,52 @@ Mcu.IPNb=9
 Mcu.Name=STM32F407V(E-G)Tx
 Mcu.Package=LQFP100
 Mcu.Pin0=PE4
-Mcu.Pin1=PC14-OSC32_IN
-Mcu.Pin10=PE11
-Mcu.Pin11=PE14
-Mcu.Pin12=PB13
-Mcu.Pin13=PB15
-Mcu.Pin14=PD8
-Mcu.Pin15=PD9
-Mcu.Pin16=PD10
-Mcu.Pin17=PD11
-Mcu.Pin18=PD12
-Mcu.Pin19=PD13
-Mcu.Pin2=PH0-OSC_IN
-Mcu.Pin20=PD14
-Mcu.Pin21=PD15
-Mcu.Pin22=PC6
-Mcu.Pin23=PC7
-Mcu.Pin24=PC8
-Mcu.Pin25=PC9
-Mcu.Pin26=PA8
-Mcu.Pin27=PA10
-Mcu.Pin28=PA13
-Mcu.Pin29=PA14
-Mcu.Pin3=PH1-OSC_OUT
-Mcu.Pin30=PA15
-Mcu.Pin31=PC10
-Mcu.Pin32=PC11
-Mcu.Pin33=PC12
-Mcu.Pin34=PD0
-Mcu.Pin35=PD1
-Mcu.Pin36=PD2
-Mcu.Pin37=PB3
-Mcu.Pin38=PB8
-Mcu.Pin39=PB9
-Mcu.Pin4=PA0-WKUP
-Mcu.Pin40=VP_FREERTOS_VS_ENABLE
-Mcu.Pin41=VP_SYS_VS_tim5
-Mcu.Pin5=PA1
-Mcu.Pin6=PA4
-Mcu.Pin7=PA5
-Mcu.Pin8=PA7
-Mcu.Pin9=PE9
-Mcu.PinsNb=42
+Mcu.Pin1=PE6
+Mcu.Pin10=PA5
+Mcu.Pin11=PA7
+Mcu.Pin12=PC4
+Mcu.Pin13=PE9
+Mcu.Pin14=PE11
+Mcu.Pin15=PE14
+Mcu.Pin16=PB13
+Mcu.Pin17=PB15
+Mcu.Pin18=PD8
+Mcu.Pin19=PD9
+Mcu.Pin2=PC14-OSC32_IN
+Mcu.Pin20=PD10
+Mcu.Pin21=PD11
+Mcu.Pin22=PD12
+Mcu.Pin23=PD13
+Mcu.Pin24=PD14
+Mcu.Pin25=PD15
+Mcu.Pin26=PC6
+Mcu.Pin27=PC7
+Mcu.Pin28=PC8
+Mcu.Pin29=PC9
+Mcu.Pin3=PH0-OSC_IN
+Mcu.Pin30=PA8
+Mcu.Pin31=PA10
+Mcu.Pin32=PA13
+Mcu.Pin33=PA14
+Mcu.Pin34=PA15
+Mcu.Pin35=PC10
+Mcu.Pin36=PC11
+Mcu.Pin37=PC12
+Mcu.Pin38=PD0
+Mcu.Pin39=PD1
+Mcu.Pin4=PH1-OSC_OUT
+Mcu.Pin40=PD2
+Mcu.Pin41=PB3
+Mcu.Pin42=PB8
+Mcu.Pin43=PB9
+Mcu.Pin44=VP_FREERTOS_VS_ENABLE
+Mcu.Pin45=VP_SYS_VS_tim5
+Mcu.Pin5=PC2
+Mcu.Pin6=PA0-WKUP
+Mcu.Pin7=PA1
+Mcu.Pin8=PA2
+Mcu.Pin9=PA4
+Mcu.PinsNb=46
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F407VGTx
@@ -108,6 +112,10 @@ PA15.GPIO_Label=MOTOR1_IN2
 PA15.GPIO_Speed=GPIO_SPEED_FREQ_MEDIUM
 PA15.Locked=true
 PA15.Signal=GPIO_Output
+PA2.GPIOParameters=GPIO_Label
+PA2.GPIO_Label=Hand_Pneumatic
+PA2.Locked=true
+PA2.Signal=GPIO_Output
 PA4.GPIOParameters=GPIO_PuPd,GPIO_Label
 PA4.GPIO_Label=ZONE_45
 PA4.GPIO_PuPd=GPIO_PULLUP
@@ -162,6 +170,12 @@ PC14-OSC32_IN.GPIOParameters=GPIO_Label
 PC14-OSC32_IN.GPIO_Label=ZONE_INIT
 PC14-OSC32_IN.Locked=true
 PC14-OSC32_IN.Signal=GPIO_Input
+PC2.GPIOParameters=GPIO_Label
+PC2.GPIO_Label=Grip_Pneumatic
+PC2.Locked=true
+PC2.Signal=GPIO_Output
+PC4.Locked=true
+PC4.Signal=GPIO_Output
 PC6.GPIOParameters=GPIO_Speed,GPIO_PuPd
 PC6.GPIO_PuPd=GPIO_PULLUP
 PC6.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
@@ -237,6 +251,10 @@ PE4.GPIOParameters=GPIO_Label
 PE4.GPIO_Label=ZONE_BLUE
 PE4.Locked=true
 PE4.Signal=GPIO_Input
+PE6.GPIOParameters=GPIO_Label
+PE6.GPIO_Label=IMU_Detect
+PE6.Locked=true
+PE6.Signal=GPIO_Input
 PE9.GPIOParameters=GPIO_Speed,GPIO_PuPd
 PE9.GPIO_PuPd=GPIO_PULLUP
 PE9.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
