--- a/Horse/Walker_Horse/Final_Robot/Horse_Generator/Horse/Horse.ioc
+++ b/Horse/Walker_Horse/Final_Robot/Horse_Generator/Horse/Horse.ioc
@@ -202,11 +202,11 @@ PD1.GPIO_Label=ZONE_MOUNTAIN
 PD1.Locked=true
 PD1.Signal=GPIO_Input
 PD10.GPIOParameters=GPIO_Label
-PD10.GPIO_Label=PROXIMITY_FRONT
+PD10.GPIO_Label=Proximity_Up
 PD10.Locked=true
 PD10.Signal=GPIO_Input
 PD11.GPIOParameters=GPIO_Label
-PD11.GPIO_Label=PROXIMITY_BACK
+PD11.GPIO_Label=Proximity_Front
 PD11.Locked=true
 PD11.Signal=GPIO_Input
 PD12.GPIOParameters=GPIO_Speed,GPIO_Label
@@ -232,7 +232,7 @@ PD2.GPIO_Speed=GPIO_SPEED_FREQ_MEDIUM
 PD2.Locked=true
 PD2.Signal=GPIO_Output
 PD8.GPIOParameters=GPIO_Label
-PD8.GPIO_Label=PROXIMITY_UP
+PD8.GPIO_Label=Proximity_Back
 PD8.Locked=true
 PD8.Signal=GPIO_Input
 PD9.GPIOParameters=GPIO_Label
